--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/akoto.png" alt="Next Tech Billonaire" sizes="1"></td>
+            <td><img src="akoto.png" alt="Next Tech Billonaire" sizes="1"></td>
             <td><h1>S D Akoto</h1>
                 <p><em>Founder and CTO of <strong> <a href="http://accraposts.com/">UKA Ride</a></strong>.</em></p>
                 <p>I am a network and system engineer as well as a web developer. I ❤ $$$y.</p></td>
@@ -21,6 +21,7 @@
         <li>The Complete Web Development Bootcamp</li>
         <li>The Complte iOS Development Bootcamp</li>
     </ul>
+    <hr>
     <h3>Work Experience</h3>
     <table>
         <thead>
@@ -43,12 +44,14 @@
                 <td>2015-2020</td>
                 <td>Lead Developer at UKA Rider</td>
             </tr>
+    
         </tbody>
 
         <tfoot>
 
         </tfoot>
     </table>
+    <hr>
     <h3>Skills</h3>
     <table>
         <tr>
